--- a/EcosystemSampleApp/Base.lproj/Main.storyboard
+++ b/EcosystemSampleApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3vJ-qj-IoG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3vJ-qj-IoG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -102,20 +102,44 @@
                                     <constraint firstItem="838-ZL-O1D" firstAttribute="height" secondItem="yO7-Yb-Spq" secondAttribute="height" id="lnx-kH-W0o"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aty-Ph-D33">
+                                <rect key="frame" x="81.5" y="617" width="212" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7mm-R7-odN"/>
+                                    <constraint firstAttribute="width" constant="212" id="pgt-UE-KFU"/>
+                                </constraints>
+                                <state key="normal" title="Buy a sticker (native spend)"/>
+                                <connections>
+                                    <action selector="buyStickerTapped:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="dRc-67-kWD"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="uM8-2O-gfe">
+                                <rect key="frame" x="303.5" y="622" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="FvT-Cf-pDk"/>
+                                    <constraint firstAttribute="height" constant="20" id="u2c-C4-Gc6"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="lle-UR-pca" firstAttribute="leading" secondItem="rUh-Au-2YO" secondAttribute="leading" id="4TF-Jj-CMf"/>
+                            <constraint firstItem="rUh-Au-2YO" firstAttribute="bottom" secondItem="aty-Ph-D33" secondAttribute="bottom" constant="20" id="AlO-Or-1s7"/>
                             <constraint firstItem="lle-UR-pca" firstAttribute="top" secondItem="rUh-Au-2YO" secondAttribute="top" id="KoY-oM-UOV"/>
                             <constraint firstItem="rUh-Au-2YO" firstAttribute="trailing" secondItem="lle-UR-pca" secondAttribute="trailing" id="UEq-xR-ILu"/>
                             <constraint firstItem="rUh-Au-2YO" firstAttribute="bottom" secondItem="lle-UR-pca" secondAttribute="bottom" id="jeE-ud-by7"/>
+                            <constraint firstItem="uM8-2O-gfe" firstAttribute="leading" secondItem="aty-Ph-D33" secondAttribute="trailing" constant="10" id="mFw-BL-QvI"/>
+                            <constraint firstItem="aty-Ph-D33" firstAttribute="centerX" secondItem="rUh-Au-2YO" secondAttribute="centerX" id="sTV-9k-Www"/>
+                            <constraint firstItem="uM8-2O-gfe" firstAttribute="centerY" secondItem="aty-Ph-D33" secondAttribute="centerY" id="vbc-cT-7jD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rUh-Au-2YO"/>
                     </view>
                     <connections>
+                        <outlet property="buyStickerButton" destination="aty-Ph-D33" id="lSV-Mf-psY"/>
                         <outlet property="continueButton" destination="838-ZL-O1D" id="y6P-Nd-qwH"/>
                         <outlet property="currentUserLabel" destination="SRd-bx-wBE" id="CJM-o4-Cwn"/>
                         <outlet property="newUserButton" destination="yO7-Yb-Spq" id="vU7-xB-WY6"/>
+                        <outlet property="spendIndicator" destination="uM8-2O-gfe" id="qig-0d-l0H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XCR-GG-cmi" userLabel="First Responder" sceneMemberID="firstResponder"/>
