--- a/EcosystemSampleApp/Base.lproj/Main.storyboard
+++ b/EcosystemSampleApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3vJ-qj-IoG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3vJ-qj-IoG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,32 +18,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="lle-UR-pca">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lle-UR-pca">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wpg-LA-snz">
-                                        <rect key="frame" x="67.5" y="0.0" width="240" height="85.5"/>
+                                        <rect key="frame" x="67.5" y="0.0" width="240" height="55"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="85.5" id="BCw-Tc-s3d"/>
+                                            <constraint firstAttribute="height" priority="999" constant="85.5" id="BCw-Tc-s3d"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="6" id="v4x-Xw-hwl"/>
                                         </constraints>
                                     </view>
-                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="kinMarketplaceIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2uH-gP-tyr">
-                                        <rect key="frame" x="107.5" y="90.5" width="160" height="156"/>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" image="kinMarketplaceIcon" translatesAutoresizingMaskIntoConstraints="NO" id="2uH-gP-tyr">
+                                        <rect key="frame" x="107.5" y="63" width="160" height="156"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="JDy-bM-jbj"/>
                                             <constraint firstAttribute="width" constant="160" id="LBh-Sw-pBM"/>
-                                            <constraint firstAttribute="height" constant="156" id="xEY-SF-Wxv"/>
+                                            <constraint firstAttribute="height" priority="999" constant="156" id="xEY-SF-Wxv"/>
                                         </constraints>
                                     </imageView>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="uM8-2O-gfe">
-                                        <rect key="frame" x="177.5" y="251.5" width="20" height="20"/>
+                                        <rect key="frame" x="177.5" y="227" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="FvT-Cf-pDk"/>
                                             <constraint firstAttribute="height" constant="20" id="u2c-C4-Gc6"/>
                                         </constraints>
                                     </activityIndicatorView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.0.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDd-2H-tbS">
-                                        <rect key="frame" x="172.5" y="276.5" width="30" height="20.5"/>
+                                        <rect key="frame" x="172.5" y="255" width="30" height="20.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20.5" id="sME-6W-dhg"/>
                                         </constraints>
@@ -52,7 +54,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yO7-Yb-Spq">
-                                        <rect key="frame" x="47.5" y="302" width="280" height="50"/>
+                                        <rect key="frame" x="47.5" y="283.5" width="280" height="50"/>
                                         <color key="backgroundColor" red="0.019607843140000001" green="0.58823529409999997" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="dQj-1k-PDC"/>
@@ -71,7 +73,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="838-ZL-O1D">
-                                        <rect key="frame" x="47.5" y="357" width="280" height="50"/>
+                                        <rect key="frame" x="47.5" y="341.5" width="280" height="50"/>
                                         <color key="backgroundColor" red="0.019607843140000001" green="0.58823529409999997" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Launch Marketplace">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -86,7 +88,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6CR-2G-NnG">
-                                        <rect key="frame" x="47.5" y="411.5" width="280" height="50"/>
+                                        <rect key="frame" x="47.5" y="399.5" width="280" height="50"/>
                                         <color key="backgroundColor" red="0.019607843140000001" green="0.58823529409999997" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Get Kin (Native Earn)">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -101,7 +103,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nuk-Ba-scK">
-                                        <rect key="frame" x="47.5" y="466.5" width="280" height="50"/>
+                                        <rect key="frame" x="47.5" y="457.5" width="280" height="50"/>
                                         <color key="backgroundColor" red="0.019607843140000001" green="0.58823529409999997" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Buy Something (Native Spend)">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -116,7 +118,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5U-8V-i8K">
-                                        <rect key="frame" x="47.5" y="521.5" width="280" height="50"/>
+                                        <rect key="frame" x="47.5" y="515.5" width="280" height="50"/>
                                         <color key="backgroundColor" red="0.019607843140000001" green="0.58823529409999997" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Pay To User (P2P)">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -130,16 +132,31 @@
                                             <action selector="payToUserTapped:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="VTs-NK-oU5"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRd-bx-wBE">
-                                        <rect key="frame" x="87.5" y="576.5" width="200" height="20.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZn-tm-51p">
+                                        <rect key="frame" x="53.5" y="573.5" width="268" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRd-bx-wBE">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="20.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20.5" id="Exk-pm-K7x"/>
+                                                    <constraint firstAttribute="width" constant="200" id="s7J-KF-4gc"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" red="0.3665980995" green="0.4019234478" blue="0.51380604510000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c90-ee-IQJ">
+                                                <rect key="frame" x="200" y="0.0" width="68" height="20.5"/>
+                                                <state key="normal" title="user stats"/>
+                                                <connections>
+                                                    <action selector="userStats:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="evQ-qG-a2c"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20.5" id="Exk-pm-K7x"/>
-                                            <constraint firstAttribute="width" constant="200" id="s7J-KF-4gc"/>
+                                            <constraint firstAttribute="height" constant="20.5" id="65m-fu-qoi"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" red="0.3665980995" green="0.4019234478" blue="0.51380604510000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8D-ua-uIc">
                                         <rect key="frame" x="67.5" y="602" width="240" height="45"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
