--- a/EcosystemSampleApp/Base.lproj/Main.storyboard
+++ b/EcosystemSampleApp/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                                             <constraint firstAttribute="height" constant="50" id="dQj-1k-PDC"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="280" id="sdW-SE-Qcu"/>
                                         </constraints>
-                                        <state key="normal" title="New User (restart)">
+                                        <state key="normal" title="Logout">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
@@ -69,7 +69,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <action selector="newUserTapped:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="ggk-iK-zbP"/>
+                                            <action selector="loginOutButtonTapped:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="vZI-T9-9nr"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="838-ZL-O1D">
@@ -132,21 +132,29 @@
                                             <action selector="payToUserTapped:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="VTs-NK-oU5"/>
                                         </connections>
                                     </button>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZn-tm-51p">
-                                        <rect key="frame" x="53.5" y="573.5" width="268" height="20.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="bZn-tm-51p">
+                                        <rect key="frame" x="47.5" y="573.5" width="280" height="20.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRd-bx-wBE">
-                                                <rect key="frame" x="0.0" y="0.0" width="200" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRd-bx-wBE">
+                                                <rect key="frame" x="0.0" y="0.0" width="67" height="20.5"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="20.5" id="Exk-pm-K7x"/>
-                                                    <constraint firstAttribute="width" constant="200" id="s7J-KF-4gc"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" red="0.3665980995" green="0.4019234478" blue="0.51380604510000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCZ-Zs-FhI">
+                                                <rect key="frame" x="114.5" y="0.0" width="50" height="20.5"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20.5" id="wf2-6H-S96"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" red="0.3665980995" green="0.4019234478" blue="0.51380604510000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c90-ee-IQJ">
-                                                <rect key="frame" x="200" y="0.0" width="68" height="20.5"/>
+                                                <rect key="frame" x="212" y="0.0" width="68" height="20.5"/>
                                                 <state key="normal" title="user stats"/>
                                                 <connections>
                                                     <action selector="userStats:" destination="3vJ-qj-IoG" eventType="touchUpInside" id="evQ-qG-a2c"/>
@@ -168,6 +176,7 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Nuk-Ba-scK" firstAttribute="height" secondItem="6CR-2G-NnG" secondAttribute="height" id="921-RF-78j"/>
+                                    <constraint firstItem="bZn-tm-51p" firstAttribute="width" secondItem="Nuk-Ba-scK" secondAttribute="width" id="RXW-Hs-W2B"/>
                                     <constraint firstItem="O5U-8V-i8K" firstAttribute="height" secondItem="Nuk-Ba-scK" secondAttribute="height" id="SwN-Mn-CcH"/>
                                     <constraint firstItem="838-ZL-O1D" firstAttribute="width" secondItem="yO7-Yb-Spq" secondAttribute="width" id="VjE-h7-ijP"/>
                                     <constraint firstItem="6CR-2G-NnG" firstAttribute="height" secondItem="838-ZL-O1D" secondAttribute="height" id="WRa-0U-Yj1"/>
@@ -188,12 +197,13 @@
                         <viewLayoutGuide key="safeArea" id="rUh-Au-2YO"/>
                     </view>
                     <connections>
+                        <outlet property="balanceLabel" destination="YCZ-Zs-FhI" id="fuB-rK-t9w"/>
                         <outlet property="buyStickerButton" destination="Nuk-Ba-scK" id="BST-29-Vtq"/>
                         <outlet property="continueButton" destination="838-ZL-O1D" id="y6P-Nd-qwH"/>
                         <outlet property="currentUserLabel" destination="SRd-bx-wBE" id="CJM-o4-Cwn"/>
                         <outlet property="externalIndicator" destination="uM8-2O-gfe" id="kwt-1e-Ykc"/>
                         <outlet property="getKinButton" destination="6CR-2G-NnG" id="J1x-AQ-7Gm"/>
-                        <outlet property="newUserButton" destination="yO7-Yb-Spq" id="vU7-xB-WY6"/>
+                        <outlet property="loginOutButton" destination="yO7-Yb-Spq" id="dJX-LU-8Jb"/>
                         <outlet property="payButton" destination="O5U-8V-i8K" id="cP8-hH-jKc"/>
                         <outlet property="titleLabel" destination="VDd-2H-tbS" id="mna-Nn-5mK"/>
                     </connections>
@@ -208,37 +218,35 @@
             </objects>
             <point key="canvasLocation" x="157.59999999999999" y="108.39580209895054"/>
         </scene>
-        <!--Pay To View Controller-->
+        <!--Target User View Controller-->
         <scene sceneID="j5n-FI-Scj">
             <objects>
-                <viewController storyboardIdentifier="PayToViewController" id="VGd-GQ-5no" customClass="PayToViewController" customModule="EcosystemSampleApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TargetUserViewController" id="VGd-GQ-5no" customClass="TargetUserViewController" customModule="EcosystemSampleApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2LL-qi-I4Y">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use a valid user id of a loggen in user from the same environment as this user because reasons." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CmR-pp-nLk">
-                                <rect key="frame" x="30" y="114" width="315" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="fQ6-kO-W0i"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.26274511220000002" green="0.26274511220000002" blue="0.2588235438" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BPh-MK-Mtz">
-                                <rect key="frame" x="34" y="64" width="307" height="30"/>
+                                <rect key="frame" x="35" y="64" width="305" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User ID:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbZ-Eo-U0W">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="syV-l5-A42"/>
-                                        </constraints>
+                                        <rect key="frame" x="0.0" y="0.0" width="52" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="otm-Hz-sSO">
+                                        <rect key="frame" x="52" y="0.0" width="6" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="6" id="AYh-X2-G7X"/>
+                                        </constraints>
+                                    </view>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s7r-w7-Jgf">
-                                        <rect key="frame" x="60" y="0.0" width="201" height="30"/>
+                                        <rect key="frame" x="58" y="0.0" width="209" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="209" id="HFp-0U-g9i"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -246,11 +254,18 @@
                                             <action selector="uidChanged:" destination="VGd-GQ-5no" eventType="editingChanged" id="01k-G7-ajP"/>
                                         </connections>
                                     </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ffB-L9-eyS">
+                                        <rect key="frame" x="267" y="0.0" width="6" height="30"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="6" id="8Tq-UV-4aW"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="safeArea" id="g7a-wI-wQP"/>
+                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gH2-Ob-uCx">
-                                        <rect key="frame" x="261" y="0.0" width="46" height="30"/>
+                                        <rect key="frame" x="273" y="0.0" width="32" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="h2h-Eh-0Tb"/>
-                                            <constraint firstAttribute="width" constant="46" id="yJn-Og-urq"/>
                                         </constraints>
                                         <state key="normal" title="Next"/>
                                         <connections>
@@ -258,16 +273,15 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="eQr-cn-SMC"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="tYq-kX-V4C" firstAttribute="trailing" secondItem="CmR-pp-nLk" secondAttribute="trailing" constant="30" id="08X-I0-gGH"/>
-                            <constraint firstItem="BPh-MK-Mtz" firstAttribute="leading" secondItem="tYq-kX-V4C" secondAttribute="leading" constant="34" id="7Am-Mz-9Jd"/>
                             <constraint firstItem="BPh-MK-Mtz" firstAttribute="top" secondItem="tYq-kX-V4C" secondAttribute="top" constant="44" id="FLs-xe-CAM"/>
-                            <constraint firstItem="CmR-pp-nLk" firstAttribute="leading" secondItem="tYq-kX-V4C" secondAttribute="leading" constant="30" id="dML-Qm-WSd"/>
-                            <constraint firstItem="tYq-kX-V4C" firstAttribute="trailing" secondItem="BPh-MK-Mtz" secondAttribute="trailing" constant="34" id="rSS-Wp-kTZ"/>
-                            <constraint firstItem="CmR-pp-nLk" firstAttribute="top" secondItem="s7r-w7-Jgf" secondAttribute="bottom" constant="20" id="tTo-nG-cxN"/>
+                            <constraint firstItem="BPh-MK-Mtz" firstAttribute="centerX" secondItem="tYq-kX-V4C" secondAttribute="centerX" id="Kxx-QV-3aX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tYq-kX-V4C"/>
                     </view>
